--- a/ProjetoWeb/.classpath
+++ b/ProjetoWeb/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="Z:/2° Semestre/Técnicas de Programação II/drivers/jackson-all-1.9.0.jar"/>
 	<classpathentry kind="lib" path="Z:/2° Semestre/Técnicas de Programação II/drivers/sqljdbc42.jar"/>
-	<classpathentry kind="lib" path="Z:/3° Semestre/Arquitetura Orientada/WebServer/jackson-all-1.9.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
